# CEF

./: .gitignore  README.md  main.py
api/: .env  main.py  pyproject.toml  requirements.txt
api/assistant/: context.py  db_embeddings.py  pdf_reader.py  schema.py
api/db/: index.faiss  index.pkl
api/utils/: format.py
assistant/: context.py  schema.py
cef-assistant/: package-lock.json  package.json
cef-assistant/public/: index.html
cef-assistant/src/: App.css  App.js  App.tsx
